# sqlalchemy-databricks

./: .env.sample  .gitignore  .tool-versions  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml
sqlalchemy_databricks/: __init__.py  _dialect.py  _type.py
tests/: conftest.py  test_dialect.py
